--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,11 @@ jobs:
           cache: npm
       - run: npm ci
       - name: Build
-        run: npm run docs:build
+        run: npm run generate
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: .vitepress/dist
+          path: client/.output/public
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
