--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           node-version: 16
           cache: npm
+          cache-dependency-path: '**/package-lock.json'
       - run: npm ci
       - name: Build
         run: npm run generate
