--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
-    "gsap": "^3.11.5"
+    "gsap": "^3.11.5",
+    "nuxt-storage": "^1.2.2"
   }
 }
